# ofzf

./: .gitignore  LICENSE  Makefile  README.md  dune-project  ofzf.opam
bench/: benchmark.ml  dune
docs/: architecture.md  cli.md  command_preview.md  design.md  highlighting.md  interactive.md  matcher.md  module_ownership.md  preview.md  preview_file_content.md  preview_state.md  query_cache.md  query_editing.md  ranking.md  rendering.md  scoring.md  search_engine.md  selection.md  technical_debt.md  terminal.md  terminal_hardening.md  text_width.md
lib/: cli.ml  cli.mli  debug.ml  debug.mli  dune  interactive.ml  interactive.mli  matcher.ml  matcher.mli  preview.ml  preview.mli  preview_state.ml  preview_state.mli  query_cache.ml  query_cache.mli  query_edit.ml  query_edit.mli  render.ml  render.mli  scoring.ml  scoring.mli  search_engine.ml  search_engine.mli  selection.ml  selection.mli  terminal.ml  terminal.mli  terminal_size_stubs.c  text_width.ml  text_width.mli  topk.ml  topk.mli  viewport.ml  viewport.mli
test/: cli_process_test.ml  cli_test.ml  dune  interactive_test.ml  matcher_test.ml  preview_state_test.ml  preview_test.ml  query_cache_test.ml  query_edit_test.ml  render_test.ml  scoring_test.ml  search_engine_test.ml  selection_test.ml  terminal_test.ml  test_support.ml  text_width_test.ml  topk_test.ml  viewport_test.ml
test/fixtures/: long_filename_this_is_intentionally_long_for_preview_and_cli_regression_coverage.txt  unicode-đường-dẫn.txt
test/fixtures/preview_dir/: README.txt
